# python-mastery

./: pyproject.toml
Exercises/: 1_art.py
